app-base/nembadminton/nembadminton.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nembadminton
  name: nembadminton
  namespace: nembadminton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nembadminton
  template:
    metadata:
      labels:
        app: nembadminton
    spec:
      volumes:
      - name: keypair
        secret:
          secretName: nembadminton-secret-files
          items:
          - key: oauth-private.key
            path: oauth-private.key
          - key: oauth-public.key
            path: oauth-public.key
      containers:
      - image: ghcr.io/dansk-badminton-tech/nembadminton:v1.26.25 # {"$imagepolicy": "nembadminton:nembadminton"}
        name: nembadminton-redis-worker
        args: ["php", "artisan", "horizon"]
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "4Gi"
      - image: ghcr.io/dansk-badminton-tech/nembadminton:v1.26.25 # {"$imagepolicy": "nembadminton:nembadminton"}
        name: nembadminton-database-worker
        args: ["php", "artisan", "queue:work", "database", "--timeout", "600", "--memory", "1024"]
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "2Gi"
      - image: ghcr.io/dansk-badminton-tech/nembadminton:v1.26.25 # {"$imagepolicy": "nembadminton:nembadminton"}
        name: nembadminton-web
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "2Gi"
        volumeMounts:
        - name: keypair
          mountPath: "/opt/nembadminton"
          readOnly: true
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nembadminton
  namespace: nembadminton
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30000
  selector:
    app: nembadminton
