app-base/nembadminton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nembadminton
 annotations:
    k8s.ngrok.com/modules: oauth
spec:
 ingressClassName: ngrok
 rules:
   - host: pup-ideal-badly.ngrok-free.app
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nembadminton-web
               port:
                 number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nembadminton-web
spec:
  selector:
    app: nembadminton
  ports:
  - port: 80
    targetPort: 80
