app-base/nembadminton/reverb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nembadminton-reverb
  name: nembadminton-reverb
  namespace: nembadminton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nembadminton-reverb
  template:
    metadata:
      labels:
        app: nembadminton-reverb
    spec:
      containers:
      - image: ghcr.io/dansk-badminton-tech/nembadminton:v1.26.25 # {"$imagepolicy": "nembadminton:nembadminton"}
        name: nembadminton-reverb
        args: ["php", "artisan", "reverb:start"]
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "2Gi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nembadminton-reverb
  namespace: nembadminton
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - ws.platform.nembadminton.dk
      secretName: nembadminton-reverb-tls
  rules:
    - host: ws.platform.nembadminton.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nembadminton-reverb
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nembadminton-reverb
  namespace: nembadminton
spec:
  selector:
    app: nembadminton-reverb
  ports:
  - port: 8080
    targetPort: 8080
